# brainlift-mcp-server

./: .gitignore  pyproject.toml  setup.sh
.github/workflows/: publish-to-mcp-hive.yml
src/: __init__.py  brainlift_client.py  main.py  oauth_client.py  server.py
